# bot-many-flask

./: .gitignore  core_functions.py  main.py  pyproject.toml  tree.txt
.cache/pypoetry/artifacts/73/9b/fe/37e09fc0e5064fa9cb4565ffca2e28a81fb6cd2483488e4c0526bcea08/: openai-1.23.6-py3-none-any.whl
.upm/: store.json
Transcript/: tema.py  transcript.py
tools/: 2_Codigo_ChatGPT
utility-tools/: 3_Compact_md.txt  get_data_info.py  purchase_intent.py
utility-tools/register/: register_email.py
